[gd_scene load_steps=8 format=3 uid="uid://d3pvosj6lk4d0"]

[ext_resource type="Script" path="res://water_dispenser.gd" id="1_n75rx"]
[ext_resource type="PackedScene" uid="uid://wxscx4c5afcp" path="res://assets/models/machines/water.glb" id="2_c0vi3"]
[ext_resource type="PackedScene" uid="uid://ce7vysyvondf8" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="3_rhbxp"]
[ext_resource type="PackedScene" uid="uid://bq1sdqlgstsrb" path="res://vfx/water_particles.tscn" id="4_tt88y"]
[ext_resource type="AudioStream" uid="uid://b2ygrd1sfrs8g" path="res://assets/sound/sfx/water_pour.mp3" id="5_rmjx2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a8h71"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lwrfw"]
albedo_color = Color(0, 0, 0, 1)

[node name="WaterDispenser" type="Node3D" groups=["Dispensable"]]
script = ExtResource("1_n75rx")

[node name="Dispenser" type="Node3D" parent="."]

[node name="water" parent="Dispenser" instance=ExtResource("2_c0vi3")]
transform = Transform3D(-5, 2.08154e-07, 0, -4.37114e-07, -2.381, 4.5792e-07, 3.82137e-14, 2.08154e-07, 5.238, 0, 0.627097, 0.00475919)

[node name="Dispenser" type="CSGBox3D" parent="Dispenser"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.214, 0)
size = Vector3(0.14541, 0.189307, 0.142285)
material = SubResource("StandardMaterial3D_a8h71")

[node name="CSGBox3D2" type="CSGBox3D" parent="Dispenser/Dispenser"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0482384, 0.005, 0)
operation = 2
size = Vector3(0.2, 0.151315, 0.218701)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Dispenser/Dispenser"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.069, 0)
radius = 0.05
height = 0.001
material = SubResource("StandardMaterial3D_lwrfw")

[node name="SnapZone" parent="." instance=ExtResource("3_rhbxp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00946948, 0.0811418, 0.0135626)
grab_distance = 0.2
snap_mode = 1
snap_require = "Dispensable"

[node name="PreparationTimer" type="Timer" parent="."]
one_shot = true

[node name="VFX" type="Node3D" parent="."]

[node name="WaterParticles" parent="VFX" instance=ExtResource("4_tt88y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.474274, 0)

[node name="SFX" type="Node3D" parent="."]

[node name="Pour" type="AudioStreamPlayer3D" parent="SFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.467894, 0)
stream = ExtResource("5_rmjx2")

[connection signal="has_picked_up" from="SnapZone" to="." method="_on_snap_zone_has_picked_up"]
[connection signal="timeout" from="PreparationTimer" to="." method="dispense"]
